--- a/_posts/2017-05-25-post63.md
+++ b/_posts/2017-05-25-post63.md
@@ -12,7 +12,9 @@ author: John Black
     {% endif %}
 
 
+{{ site.post_assets | absolute_url }}
 
+{{ absolute_url }}
 
 Musce libero nunc, dignissim quis turpis quis, semper vehicula dolor. Suspendisse tincidunt consequat quam, ac posuere leo dapibus id. Cras fringilla convallis elit, at eleifend mi interam.
 
