--- a/_posts/2017-05-25-post63.md
+++ b/_posts/2017-05-25-post63.md
@@ -14,7 +14,7 @@ author: John Black
 
 {{ site.post_assets | absolute_url }}
 
-{{ absolute_url }}
+{{ page.url  }}
 
 Musce libero nunc, dignissim quis turpis quis, semper vehicula dolor. Suspendisse tincidunt consequat quam, ac posuere leo dapibus id. Cras fringilla convallis elit, at eleifend mi interam.
 
