--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -3,7 +3,7 @@ title: Page not found
 description: The page you're looking for isn't here.
 ---
 
-## Whoops!
+## Whoops
 
 Looks like the page you are looking for isn't here. [Head back home](/) or try out some of these popular pages:
 
