feat: address feedback from PR #1014

--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -5,14 +5,29 @@ description: The page you're looking for isn't here.
 
 ## Whoops
 
-Looks like the page you are looking for isn't here. [Head back home](/) or try out some of these popular pages:
+Looks like the page you are looking for isn't here. Try out some of these popular pages:
 
-## Tutorials
+## Understand Stacks
 
 [@page-reference | grid]
-| /authentication/building-todo-app, /write-smart-contracts/counter-tutorial
+| /understand-stacks/overview, /understand-stacks/proof-of-transfer, /understand-stacks/testnet
 
-## Explore
+## Write smart contracts
+
+[@page-reference | grid]
+| /write-smart-contracts/overview, /write-smart-contracts/hello-world-tutorial
+
+## Build apps
+
+[@page-reference | grid]
+| /build-apps/guides/authentication, /build-apps/guides/transaction-signing, /build-apps/guides/data-storage
+
+## Start mining
+
+[@page-reference | grid]
+| /start-mining, /understand-stacks/running-testnet-node
+
+## Ecosystem
 
 [@page-reference | grid-small]
-| /ecosystem/overview, /ecosystem/stacks-token, /understand-stacks/testnet-node
+| /ecosystem/overview, /ecosystem/stacks-token, /ecosystem/contributing
