--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -5,7 +5,11 @@ description: The page you're looking for isn't here.
 
 ## Whoops
 
-Looks like the page you are looking for isn't here. Try out some of these popular pages:
+Looks like the page you are looking for isn't here.
+
+-> Developer content has recently moved to [docs.hiro.so](https://docs.hiro.so/). For more information on the content move, see [this post](https://forum.stacks.org/t/the-evolution-of-the-stacks-documentation-and-a-new-hiro-docs-site/12343) on the Stacks forum. Check for your content at [docs.hiro.so](https://docs.hiro.so/) or ask in Discord if you believe you have reached this page in error.
+
+Try out some of these popular pages:
 
 ## Understand Stacks
 
@@ -15,19 +19,9 @@ Looks like the page you are looking for isn't here. Try out some of these popula
 ## Write smart contracts
 
 [@page-reference | grid]
-| /write-smart-contracts/overview, /write-smart-contracts/hello-world-tutorial
-
-## Build apps
-
-[@page-reference | grid]
-| /build-apps/guides/authentication, /build-apps/guides/transaction-signing, /build-apps/guides/data-storage
+| /write-smart-contracts/overview
 
 ## Start mining
 
 [@page-reference | grid]
-| /start-mining/mainnet, /start-mining/testnet, /understand-stacks/running-mainnet-node, /understand-stacks/running-testnet-node, /understand-stacks/running-regtest-node
-
-## Ecosystem
-
-[@page-reference | grid-small]
-| /ecosystem/overview, /ecosystem/stacks-token, /ecosystem/contributing
+| /start-mining/mainnet, /start-mining/testnet
